--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,7 +4,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="action-sheets-basic-page">
   <h2>Welcome to Ionic!</h2>
   <p>
     This starter project comes with simple tabs-based layout for apps
@@ -14,4 +14,9 @@
     Take a look at the <code>src/pages/</code> directory to add or change tabs,
     update any existing page or create new pages.
   </p>
+
+  <button ion-button block (click)="openMenu()">
+    Show Action Sheet
+  </button>
+
 </ion-content>
