--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,17 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>My Favorite Restaurants</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding class="action-sheets-basic-page">
-  <h2>Welcome to Ionic!</h2>
+  <h2>Bienvenue dans My Favorite Restaurants !</h2>
   <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
+    Gérez vos reviews des restaurants que vous avez visités.
   </p>
   <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
+    Vous pouvez parcourir toutes les reviews, en ajouter, supprimer et les modifier. Sélectionnez un onglet pour commencer.
+
   </p>
 
   <button ion-button block (click)="openMenu()">
